--- a/style.css
+++ b/style.css
@@ -1,14 +1,35 @@
-header{background: rgb(161, 161, 243); height: 120px}
+body {
+    color: #555;
+margin: 0}
 
-div {
-    padding: 10px;
-  }
+    #header 
+    
+    
+    {
+        background-color: #1abc9c; 
+        height: 150px; 
+        line-height: 150px;
+    }
 
-  div {
-    position: relative;
-    border: 3px solid blue;
-    left: 30px;
-  }
+    #header-title {
+        display: block;
+        float: left;
 
+        font-size: 20px;
+        font-weight: bold;
+    }
 
+    #header-nav
+    li {
+        display: inline; 
+        padding-left: 20px; }
+        {
+        display: block;
+        float: right; 
+        margin-top: 0;
+    }
 
+    .container {
+        max-width: 1000px;
+        margin: 0 auto;
+    }
